--- a/portfolio/projects/photox/style.css
+++ b/portfolio/projects/photox/style.css
@@ -11,7 +11,8 @@ header {
 
 /* navbar */
 .nav-menu{
-  background: linear-gradient(rgba(0,0,0,.3), rgba(0,0,0,.5));
+  /* background: linear-gradient(rgba(0,0,0,.3), rgba(0,0,0,.5)); */
+  background: #000;
   padding: 30px;
   transition: all .7s;
 }
