--- a/portfolio/projects/QuizApp/style.css
+++ b/portfolio/projects/QuizApp/style.css
@@ -59,3 +59,9 @@ body{
     cursor: pointer;
     display: block;
 }
+.correct{
+    background: #9aeabc;
+}
+.incorrect{
+    background: #ff9393;
+}
